# appther-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  crawl.yml  deploy.yml
api/: .dockerignore  Dockerfile  main.py  secrets.py  state.py
api/rag/: __init__.py  embed.py  generate.py  prompt.py  rerank.py  retrieve.py  rewrite.py  types.py
api/tests/: conftest.py  test_api.py  test_generate.py  test_retrieve.py  test_state.py
crawler/: .dockerignore  Dockerfile  README.md  chunk.py  config.py  discovery.py  embed.py  extract.py  fetch.py  http_client.py  index.py  llms.py  models.py  normalize.py  pipeline.py  render_spike.py  robots.py  staging.py  urls.py  verify.py
crawler/tests/: conftest.py  test_chunk.py  test_chunk_size_invariant.py  test_discovery.py  test_embed.py  test_extract.py  test_fetch.py  test_index.py  test_normalize.py  test_overview_dedup.py  test_urls.py  test_vector_index.py  test_verify.py
crawler/tests/fixtures/: article_page.html  blog_sitemap.xml  blog_subdomain_sitemap.xml  faq_page.html  homepage.html  main_urlset.xml  page_sitemap.xml  robots.txt  sitemap_index.xml
infra/: budgets.tf  cloudfront_waf.tf  dynamodb.tf  ecr.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
widget/: package-lock.json  package.json  tsconfig.json  vite.config.ts
widget/src/: client.ts  index.ts  types.ts
widget/src/components/: ChatWidget.tsx
widget/test/: ChatWidget.test.tsx  client.test.ts  setup.ts
